converted project to library

--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "session-service-presentation",
+  "name": "presentation-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon -e js,html,mustache index.js "
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JBowns/presentation-server.git"
   },
-  "author": "",
-  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JBowns/presentation-server/issues"
+  },
+  "author": "Jacob Bowns",
+  "license": "MIT",
+  "homepage": "https://github.com/JBowns/presentation-server#readme",
   "dependencies": {
     "express": "^4.15.5",
     "mustache": "^2.3.0",
